grammar.js
    source_file: $ => seq(
      repeat($._NL),
      optional($.shebang_line),
      repeat($.file_annotation),
      repeat($._NL),
      optional($.package_header),
      repeat($._NL),
      repeat(seq($.import_header, optional(seq($._semi, repeat($._NL))))),
      // In principle, we either parse a Kotlin file (.kt) or a Kotlin script (.kts).
      // Statements cannot appear as top-level constructs in Kotlin files, only in scripts.
      // However, here, we're allowing parsing of both statements and declarations as top level.
      repeat(choice($._top_level_object, $._top_level_statements))
    ),

    _top_level_object: $ => seq($._declaration, repeat($._semi)),

    _top_level_statements: $ => seq(
      sep1(alias($._top_level_statement, $.statement), repeat1($._semi)),
      repeat($._semi)
    ),

    _declaration: $ => choice(
      $.class_declaration,
      alias($.class_declaration_no_body, $.class_declaration),
      $.object_declaration,
      $.function_declaration,
      $.property_declaration,
      $.type_alias
    ),

    // ==========
    // Classes
    // ==========

    class_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      choice("class", seq(optional(seq("fun", repeat($._NL))), "interface")),
      repeat($._NL),
      field("name", $.simple_identifier),
      optional(seq(repeat($._NL), $.type_parameters)),
      optional(seq(repeat($._NL), $.primary_constructor)),
      optional(seq(repeat($._NL), ":", repeat($._NL),  $._delegation_specifiers)),
      optional(seq(repeat($._NL), $.type_constraints)),
      repeat($._NL), 
      field("body", choice($.class_body, alias($.enum_class_body, $.class_body))),
    ),

    primary_constructor: $ => seq(
      optional(seq(optional(field("modifiers", $.modifiers)), "constructor", repeat($._NL))),
      $.class_parameters
    ),

    class_body: $ => seq(
      "{",
      repeat($._NL),
      repeat($._class_member_declaration),
      "}"
    ),

    class_parameters: $ => seq(
      "(",
      repeat($._NL),
      optional(sep1($.class_parameter, repeat($._NL), ",", repeat($._NL))),
      optional(","),
      repeat($._NL),
      ")"
    ),

    class_parameter: $ => seq(
      optional(field("modifiers", $.modifiers)),
      optional(field("binding_pattern", $.binding_pattern_kind)),
      field("name", $.simple_identifier),
      ":",
      field("type", $._type),
      optional(seq(repeat($._NL), "=", repeat($._NL), field("initializer", $.expression)))
    ),

    binding_pattern_kind: $ => choice("val", "var"),

    _delegation_specifiers: $ => sep1(
      $._annotated_delegation_specifier, 
      ",",
      repeat($._NL),
    ),

    delegation_specifier: $ => prec.right(choice(
      $.constructor_invocation,
      $.explicit_delegation,
      $.user_type,
      $.function_type
    )),

    constructor_invocation: $ => seq(
      $.user_type,
      $.value_arguments
    ),

    _class_member_declaration: $ => seq(choice(
      $._declaration,
      $.companion_object,
      $.anonymous_initializer,
      $.secondary_constructor,
    ), repeat($._semi)),

    function_value_parameters: $ => seq(
      "(",
      repeat($._NL),
      optional(sep1($.function_value_parameter, repeat($._NL), ",", repeat($._NL))),
      optional(","),
      repeat($._NL),
      ")"
    ),

    function_value_parameter: $ => seq(
      optional(field("modifiers", $.parameter_modifiers)),
      field("parameter", $.parameter),
      optional(seq("=", repeat($._NL), field("initializer", $.expression)))
    ),

    function_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      "fun",
      optional($.type_parameters),
      optional(seq(repeat($._NL), field("receiver_type", $.receiver_type), repeat($._NL), optional("."))),
      field("name", $.simple_identifier),
      field("parameters", $.function_value_parameters),
      optional(seq(repeat($._NL), ":", repeat($._NL), field("type", $._type))),
      optional(seq(repeat($._NL), $.type_constraints)),
      optional(seq(repeat($._NL), field("body", prec.dynamic(100, $.function_body))))
    ),

    function_body: $ => choice(
      $.block, 
      seq("=", repeat($._NL), field("expression", $.expression))
    ),

    variable_declaration: $ => seq(
      repeat($._annotation),
      repeat($._NL),
      field("id", $.simple_identifier),
      optional(field("type", seq(repeat($._NL), ":", repeat($._NL), $._type)))
    ),

    property_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      $.binding_pattern_kind,
      optional(field("type_parameters", $.type_parameters)),
      optional(seq(field("receiver_type", $.receiver_type), ".")),
      field("var_decl", choice($.variable_declaration, $.multi_variable_declaration)),
      optional(field("type_constraints", $.type_constraints)),
      optional(seq(
        repeat($._NL),
        choice(
          seq("=", repeat($._NL), field("initializer", $.expression)),
          $.property_delegate
      ))),
      optional(
        seq(      
          repeat($._NL),
          optional(";"),
          repeat($._NL),
          $._setter_getter
        )
      )
    ),

    _setter_getter: $ => choice(
      seq($.getter, optional(seq(repeat($._NL), $.setter))),
      seq($.setter, optional(seq(repeat($._NL), $.getter)))
    ),

    parameter: $ => seq(
      field("name", $.simple_identifier), 
      repeat($._NL),
      ":", 
      repeat($._NL),
      field("type", $._type)
    ),

    secondary_constructor: $ => seq(
      optional(field("modifiers", $.modifiers)),
      "constructor",
      repeat($._NL),
      field("parameters", $.function_value_parameters),
      optional(seq(repeat($._NL), ":", repeat($._NL), $.constructor_delegation_call)),
      optional(field("block", $.block))
    ),

    _type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.function_type,
        $.not_nullable_type
      )
    ),

    // Give type reference a higher precedence to resolve conflict with parenthesized expression
    _type_reference: $ => choice(
      field("type", $.user_type),
      "dynamic"
    ),

    nullable_type: $ => seq(
      choice($._type_reference, $.parenthesized_type),
      repeat1("?")
    ),

    user_type: $ => seq(
      $._simple_user_type, repeat(seq(".", repeat($._NL), $._simple_user_type))
    ),

    _simple_user_type: $ => seq(
      alias($.simple_identifier, $.type_identifier),
      optional($.type_arguments)
    ),

    type_projection: $ => choice(
      seq(optional($.type_projection_modifiers), $._type),
      "*"
    ),

    function_type: $ => seq(
      optional(seq($.receiver_type, ".", repeat($._NL))), 
      $.function_type_parameters,
      repeat($._NL),
      "->",
      repeat($._NL),
      $._type
    ),

    // A higher-than-default precedence resolves the ambiguity with 'parenthesized_type'
    function_type_parameters: $ => seq(
      "(",
      repeat($._NL),
      optional(sep1(choice($.parameter, $._type), repeat($._NL), ",", repeat($._NL))),
      repeat($._NL),
      ")"
    ),

    _statements: $ => seq($.statements, repeat($._semi)),

    statements: $ => seq(sep1($.statement, repeat1($._semi)), optional(seq(repeat($._NL), ";"))),

    statement: $ => choice(
      $._declaration,
      $.assignment,
      $._loop_statement,
      $.expression
    ),

    block: $ => seq(
      "{",
      repeat($._NL),
      optional($._statements),
      "}"
    ),

    _loop_statement: $ => choice(
      $.for_statement,
      $.while_statement,
      $.do_while_statement
    ),

    assignment: $ => seq(
      repeat(choice($.label, $._annotation)),
      field("left", $._directly_assignable_expression),
      field("op", $._assignment_operator),
      repeat($._NL),
      field("right", $.expression)
    ),

    _directly_assignable_expression: $ => choice(
      $.dot_qualified_expression,
      $.index_access_expression,
      $.simple_identifier,
      $.postfix_expression,
    ),

    // ==========
    // Expressions
    // ==========

    dot_qualified_expression: $ => prec(PREC.DOT, seq(
      field("receiver", $.expression),
      repeat($._external_nl),
      choice(".", "?."),
      repeat($._NL),
      field("selector", choice(
        $.simple_identifier,
        $.parenthesized_expression,
        "class"
      ))
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field("expression", $.expression), 
      optional($.type_arguments),
      $._call_arguments
    )),

    // It's not possible to resolve the ambiguity between explicit delegation and calls with last lambda argument.
    // For example:
    //   class Derived(b: Base) : Base by b {
    //     override fun printMessage() { print("abc") }
    //   }
    // Here, b {}, can be parsed as both a call expression or a delegation followed by the class body. In this case,
    // we need the second interpreation. But in funciton calls like `with (s) {}`, we want `{}` to be parsed as part
    // of the call. That means that based on the context a call_expression happens in, we either want left or right
    // associativity for the arguments, which is not posssible to specify with tree-sitter. 
    // Creating a separate nonterminal, is the cleanest way to move forward.
    // A simple_call_expression is the one without the trailing lambda argument.
    _call_arguments: $ => prec.right(choice(
      seq(optional(field("args", $.value_arguments)), field("lambda_arg", $.annotated_lambda)),
      field("args", $.value_arguments)
    )),
    
    index_access_expression: $ => prec(PREC.INDEX, seq(
      field("expression", $.expression), 
      "[",
      field("index", $.expression),
      repeat(seq(",", $.expression)),
      optional(","),
      "]")
    ),

    annotated_expression: $ => seq($._annotation, $.expression),

    as_expression: $ => prec(PREC.AS, seq($.expression, $._as_operator, repeat($._NL), $._type)),

    // Binary expressions

    annotated_lambda: $ => seq(
      repeat($._annotation),
      optional($.label),
      $.lambda_literal
    ),

    // Here we're defining a dynamic precedence for type arguments to resolve the ambiguity
    // between the comparison and generic call syntax.
    // Any expression such as a<b>(c) should be resolved in favor of the generic call.
    type_arguments: $ => prec.dynamic(PREC.GENERIC, seq(
      "<", 
      repeat($._NL),
      sep1($.type_projection, repeat($._NL), ",", repeat($._NL)), 
      repeat($._NL),
      ">"
    )),

    value_arguments: $ => seq(
      "(",
      repeat($._NL),
      optional(
        seq(
          sep1($.value_argument, repeat($._NL), ",", repeat($._NL)),
          optional(seq(repeat($._NL), ",")),
          repeat($._NL),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional($._annotation),
      repeat($._NL),
      optional(seq($.simple_identifier, repeat($._NL), "=", repeat($._NL))),
      optional("*"),
      repeat($._NL),
      $.expression
    ),

    collection_literal: $ => seq(
      "[", 
      repeat($._NL),
      optional(seq(
        sep1($.expression, repeat($._NL), ",", repeat($._NL)),
        repeat($._NL),
        optional(","),
      )),
      repeat($._NL),
      "]"
    ),

    string_literal: $ => choice(
      $._line_string_literal,
      $._multi_line_string_literal
    ),

    _line_string_literal: $ => seq(
      '"',
      repeat(choice(
        alias($.line_string_content, $.string_content), 
        alias(DOLLAR_IN_STRING_CONTENT, $.string_content),
        $._interpolation
      )),
      // Need to consume the last '$' character here, and create a node in the tree
      choice('"', seq(alias("$", $.string_content), '"'))
    ),

    _multi_line_string_literal: $ => prec.right(seq(
      '"""',
      repeat(choice(
        alias($.multi_line_string_content, $.string_content), 
        alias(DOLLAR_IN_STRING_CONTENT, $.string_content), 
        QUOTE_IN_MULTI_LINE_STRING_CONTENT,
        $._interpolation,
      )),
      // Need to consume the last '$' character here, and create a node in the tree
      optional(alias("$", $.string_content)),
      '"""',
      repeat('"')
    )),

    lambda_literal: $ => prec(-1, seq(
      "{",
      repeat($._NL),
      optional(seq(optional(field("parameters", $.lambda_parameters)), repeat($._NL), "->", repeat($._NL))),
      optional(field("body", $._statements)),
      "}"
    )),

    this_expression: $ => choice(
      "this",
      $._this_at
    ),

    if_expression: $ => seq(
      "if",
      repeat($._NL),
      $._if_condition,
      repeat($._NL),
      choice(
        field("consequence", $._control_body_structure),
        seq(
          optional(field("consequence", $._control_body_structure)),
          repeat($._NL),
          // We need to give else a higher precedence to extend the if-expression to the right
          prec.dynamic(1, "else"),
          repeat($._NL),
          field("alternative", $._control_body_structure)
        )
      )
    ),

    _if_condition: $ => seq(
      "(",
      repeat($._NL),
      field("condition", $.expression), 
      repeat($._NL),
      ")",
    ),

    _control_body_structure: $ => choice(
      $.expression, 
      $.assignment, 
      $.block,
      $._loop_statement,
    ),

    return_expression: $ => prec.right(seq(
      choice("return", seq("return@", $._lexical_identifier)), 
      optional($.expression)
    )),

    callable_reference: $ => prec(PREC.DOT, seq(
      optional(choice(seq($.user_type, optional("?")), $.this_expression)),
      "::",
      choice($.simple_identifier, "class")
    )),

    _assignment_operator: $ => choice("=", "+=", "-=", "*=", "/=", "%="),

    _as_operator: $ => choice("as", "as?"),

    modifiers: $ => prec.right(repeat1(choice($._annotation, $._modifier))),

    _modifier: $ => seq(choice(
      $.class_modifier,
      $.member_modifier,
      $.visibility_modifier,
      $.function_modifier,
      $.property_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier
    ), repeat($._NL)),

    type_modifiers: $ => repeat1($._type_modifier),

    _type_modifier: $ => choice($._annotation, "suspend"),

    member_modifier: $ => choice(
      "override",
      "lateinit"
    ),

    property_modifier: $ => "const",

    _annotation: $ => seq(
      $.annotation,
      repeat($._NL)
    ),

    annotation: $ => choice($._single_annotation, $._multi_annotation),

    _single_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      $._unescaped_annotation
    ),

    _multi_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      "[",
      repeat1($._unescaped_annotation),
      "]"
    ),

    use_site_target: $ => seq(
      choice("field", "property", "get", "set", "receiver", "param", "setparam", "delegate"),
      repeat($._NL),
      ":"
    ),

    simple_identifier: $ => choice($._lexical_identifier, $._soft_keywords),

    _soft_keywords: $ => choice(
      "by",
      "catch",
      "constructor",
      "delegate",
      "dyanamic",
      "field",
      "file",
      "finally",
      "get",
      "import",
      "init",
      "param",
      "property",
      "receiver",
      "set",
      "setparam",
      "value",
      "where",
      // modifier keywords
      "abstract",
      "actual",
      "annotation",
      "companion",
      "const",
      "crossline",
      "data",
      "enum",
      "expect",
      "data",
      "inner",
      "internal",
      "lateinit",
      "noinline",
      "open",
      "operator",
      "out",
      "override",
      "private",
      "protected",
      "public",
      "reified",
      "sealed",
      "suspend",
      "tailrec",
      "vararg"
    ),

    _this_at: $ => seq(
      "this@",
      alias($._lexical_identifier, $.type_identifier)
    ),
