test/corpus/annotations.txt
==================
Annotations
==================

@Test
class Empty

---

(source_file
  (class_declaration
    modifiers: (modifiers (annotation (user_type (type_identifier))))
    name: (simple_identifier)))

==================
Annotations with use-site-target
==================

class Empty(@field:Test val x: Boolean)

---

(source_file
  (class_declaration
    name: (simple_identifier)
    primary_constructor: (primary_constructor
      (class_parameters
        (class_parameter
          modifiers: (modifiers
            (annotation
              (use_site_target)
              (user_type
                (type_identifier))))
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (type
            type: (user_type
              (type_identifier))))))))

==================
Multi-annotations
==================

@set:[Inject VisibleForTesting]
var x: Int

---

(source_file
  (property_declaration
    modifiers: (modifiers
      (annotation
        (use_site_target)
        (user_type
          (type_identifier))
        (user_type
          (type_identifier))))
    binding_pattern: (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier)
      type: (type
        type: (user_type
          (type_identifier))))))

==================
Multiple annotations on a variable
==================

class X {
 @A @B
 override val s: String
}

---

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (property_declaration
        modifiers: (modifiers
          (annotation
            (user_type
              (type_identifier)))
          (annotation
            (user_type
              (type_identifier)))
          (member_modifier))
        binding_pattern: (binding_pattern_kind)
        var_decl: (variable_declaration
          id: (simple_identifier)
          type: (type
            type: (user_type
              (type_identifier))))))))

==================
Multiple annotations on a function
==================

class X {
 @A @B
 fun s(): String
}

---

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (function_declaration
        modifiers: (modifiers
          (annotation
            (user_type
              (type_identifier)))
          (annotation
            (user_type
              (type_identifier))))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        return_type: (type
          type: (user_type
            (type_identifier)))))))

=====================
Annotated functions
======================

@Test
fun foo() = bar {}

---

(source_file
  (function_declaration
    modifiers: (modifiers
      (annotation
        (user_type
          (type_identifier))))
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      expression: (call_expression
        expression: (simple_identifier)
        lambda_arg: (annotated_lambda
          lambda_literal: (lambda_literal))))))


=====================
Annotation with collection literal 
======================

@Annotation(
    owner = "foo",
    modules = [
        BAR,
    ]
)
const val BAZ = "baz"

---

(source_file
  (property_declaration
    modifiers: (modifiers
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          args: (value_arguments
            (value_argument
              name: (simple_identifier)
              expression: (string_literal
                content: (string_content
                  (line_string_content_part))))
            (value_argument
              name: (simple_identifier)
              expression: (collection_literal
                (simple_identifier))))))
      (property_modifier))
    binding_pattern: (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (string_literal
      content: (string_content
        (line_string_content_part)))))

=====================
Annotation with empty collection literal 
======================

@Annotation(
    owner = "foo",
    modules = []
)
const val BAZ = "baz"

---

(source_file
  (property_declaration
    modifiers: (modifiers
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          args: (value_arguments
            (value_argument
              name: (simple_identifier)
              expression: (string_literal
                content: (string_content
                  (line_string_content_part))))
            (value_argument
              name: (simple_identifier)
              expression: (collection_literal)))))
      (property_modifier))
    binding_pattern: (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (string_literal
      content: (string_content
        (line_string_content_part)))))

======================
Annotation with soft-keyword argument
======================

@Fork(value = 1)
class SaneFlowPlaysScrabble : ShakespearePlaysScrabble() {
}

---

(source_file
  (class_declaration
    modifiers: (modifiers
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          args: (value_arguments
            (value_argument
              name: (simple_identifier)
              expression: (integer_literal))))))
    name: (simple_identifier)
    (delegation_specifier
      (constructor_invocation
        type: (user_type
          (type_identifier))
        args: (value_arguments)))
    body: (class_body)))


======================
Annotated call in function
======================

fun parse(xml: String): Element {
    val parser = DomXmlParser()
    @Suppress("CAST_NEVER_SUCCEEDS")
    NSXMLParser.parse()
}

---

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (type
            type: (user_type
              (type_identifier))))))
    return_type: (type
      type: (user_type
        (type_identifier)))
    body: (function_body
      (block
        (statements
          (statement
            (property_declaration
              binding_pattern: (binding_pattern_kind)
              var_decl: (variable_declaration
                id: (simple_identifier))
              initializer: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
          (statement
            (annotated_expression
              annotation: (annotation
                (constructor_invocation
                  type: (user_type
                    (type_identifier))
                  args: (value_arguments
                    (value_argument
                      expression: (string_literal
                        content: (string_content
                          (line_string_content_part)))))))
              expression: (call_expression
                expression: (dot_qualified_expression
                  receiver: (simple_identifier)
                  selector: (simple_identifier))
                args: (value_arguments)))))))))

======================
Annotated function type
======================

fun runBenchmark(name: String, frameCount: Int, content: @Composable () -> Unit) {}

---

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (type
            type: (user_type
              (type_identifier)))))
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (type
            type: (user_type
              (type_identifier)))))
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (type
            modifiers: (type_modifiers
              (annotation
                (user_type
                  (type_identifier))))
            type: (function_type
              (function_type_parameters)
                type: (type
                  type: (user_type
                    (type_identifier))))))))
    body: (function_body
      (block))))


======================
Annotated return expression
======================

@OptIn(UnsafeWasmMemoryApi::class)
return a

---

(source_file
  (statement
    (annotated_expression
      annotation: (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          args: (value_arguments
            (value_argument
              expression: (callable_reference
                receiver: (user_type
                  (type_identifier)))))))
      expression: (return_expression
        (simple_identifier)))))

======================
Annotated if-else
======================

@Suppress("UNCHECKED_CAST")
if (it.isCanceled) deferred.cancel() else deferred.complete(it.result as T)

---

(source_file
  (statement
    (annotated_expression
      annotation: (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          args: (value_arguments
            (value_argument
              expression: (string_literal
                content: (string_content
                  (line_string_content_part)))))))
      expression: (if_expression
        condition: (dot_qualified_expression
          receiver: (simple_identifier)
          selector: (simple_identifier))
        consequence: (call_expression
          expression: (dot_qualified_expression
            receiver: (simple_identifier)
            selector: (simple_identifier))
          args: (value_arguments))
        alternative: (call_expression
          expression: (dot_qualified_expression
            receiver: (simple_identifier)
            selector: (simple_identifier))
          args: (value_arguments
            (value_argument
              expression: (as_expression
                expression: (dot_qualified_expression
                  receiver: (simple_identifier)
                  selector: (simple_identifier))
                type: (type
                  type: (user_type
                    (type_identifier)))))))))))

======================
Method with two annotations
======================

class ExampleTest {
    @OptIn(ExperimentalTestApi::class)
    @Test
    fun myTest() = runComposeUiTest {
    }
}

---

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (function_declaration
        modifiers: (modifiers
          (annotation
            (constructor_invocation
              type: (user_type
                (type_identifier))
              args: (value_arguments
                (value_argument
                  expression: (callable_reference
                    receiver: (user_type
                      (type_identifier)))))))
          (annotation
            (user_type
              (type_identifier))))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body
          expression: (call_expression
            expression: (simple_identifier)
            lambda_arg: (annotated_lambda
              lambda_literal: (lambda_literal))))))))
