test/corpus/assignment.txt
================================================================================
Field Assignment
================================================================================

class Foo(){
  var foo = null
  constructor(bar:Int) {
    this.foo = bar
  }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    primary_constructor: (primary_constructor
      (class_parameters))
    body: (class_body
      (property_declaration
        binding_pattern: (binding_pattern_kind)
        var_decl: (variable_declaration
          id: (simple_identifier))
        initializer: (null_literal))
      (secondary_constructor
        parameters: (function_value_parameters
          (function_value_parameter
            parameter: (parameter
              name: (simple_identifier)
              type: (user_type
                (type_identifier)))))
        block: (block
          (statements
            (statement
              (assignment
                left: (dot_qualified_expression
                  receiver: (this_expression)
                  selector: (simple_identifier))
                right: (simple_identifier)))))))))

================================================================================
Index Assignment
================================================================================

fun main(){
  var listOfPets:Array<String>
  listOfPets[0] = "foo"
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (block
        (statements
          (statement
            (property_declaration
              binding_pattern: (binding_pattern_kind)
              var_decl: (variable_declaration
                id: (simple_identifier)
                type: (user_type
                  (type_identifier)
                  (type_arguments
                    (type_projection
                      type: (user_type
                        (type_identifier))))))))
          (statement
            (assignment
              left: (index_access_expression
                expression: (simple_identifier)
                open_bracket: (open_bracket)
                index: (integer_literal)
                close_bracket: (close_bracket))
              right: (string_literal
                (string_content)))))))))


================================================================================
This expression assignment
================================================================================

override fun handleTestExecutionException(context: ExtensionContext?, throwable: Throwable?) {
    throwable?.let {
        this@ErrorCollector += throwable
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    modifiers: (modifiers
      (member_modifier))
    name: (simple_identifier)
    parameters: (function_value_parameters
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (nullable_type
            type: (user_type
              (type_identifier)))))
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (nullable_type
            type: (user_type
              (type_identifier))))))
    body: (function_body
      (block
        (statements
          (statement
            (call_expression
              expression: (dot_qualified_expression
                receiver: (simple_identifier)
                selector: (simple_identifier))
              lambda_arg: (annotated_lambda
                (lambda_literal
                  body: (statements
                    (statement
                      (assignment
                        left: (this_expression
                          (type_identifier))
                        right: (simple_identifier)))))))))))))
